Fixed #6990 - Theme: p:selectOneMenu with empty noSelectionOption is too small

--- a/src/main/resources/META-INF/resources/primefaces-arya/theme.css
+++ b/src/main/resources/META-INF/resources/primefaces-arya/theme.css
@@ -2696,7 +2696,8 @@ body .ui-selectonemenu {
   background: #121212; }
   body .ui-selectonemenu .ui-selectonemenu-label {
     background: transparent;
-    padding-right: 2.357rem; }
+    padding-right: 2.357rem;
+    min-height: calc(2rem + 3px); }
   body .ui-selectonemenu .ui-selectonemenu-trigger {
     border: 0 none;
     cursor: pointer;
